--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Process Hosts and Whitelist
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 */12 * * *'
 
 jobs:
   process_files:
